--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -13,5 +13,6 @@
   <body>
     <noscript>Sorry, we need js to run correctly!</noscript>
     <div id="root"></div>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=3.0&ak=rSsSyrUihUCdYgTwETHg9vhi1nItqGDU"></script>
   </body>
 </html>
